Fix text alignment

--- a/style.css
+++ b/style.css
@@ -20,13 +20,11 @@ html {
 }
 
 .card footer {
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0));
-  border-radius: 1.5em 1.5em 0 0;
+  margin-left: 2em;
 }
 
 .card header {
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.1));
-  border-radius: 0 0 1.5em 1.5em;
+  margin-left: 2em;
 }
 
 .card article img {
@@ -38,4 +36,9 @@ html {
 .card article {
   height: 13.5em;
   background-color: #fecc00;
+}
+
+.card article p {
+  margin-left: 2em;
+  padding-top: 3em;
 }
